--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
