--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "fs": "^0.0.1-security",
     "module-alias": "^2.2.3",
     "nodemon": "^3.1.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "valibot": "^0.42.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prisma": "^5.19.1"
